--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "backend"
   ],
   "author": "prem",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.3"
+  }
 }
