--- a/sih-frontend/package.json
+++ b/sih-frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@formulajs/formulajs": "^4.4.6",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.53.1",
