--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
-    "react-router-dom": "^6.26.1"
+    "multer": "^1.4.5-lts.1",
+    "react-router-dom": "^6.26.1",
+    "xlsx": "^0.18.5"
   }
 }
